--- a/app/templates/app/cliente/detalleCliente.html
+++ b/app/templates/app/cliente/detalleCliente.html
@@ -10,6 +10,7 @@
         <thead class="thead-dark">
             <tr>
                 <th scope="col">Platos </th>
+                <th scope="col">Cantidad </th>
                 <th scope="col">Precio</th>
             </tr>
         </thead>
@@ -18,8 +19,9 @@
             <label for="p_id_reserva"></label>
             <input type="hidden" name="p_id_reserva" for="p_id_reserva" value="{{i.0}}">
             <tr>
-                <td>{{i.4}}</td>
-                <td>$ {{i.5}}</td>
+                <td>{{i.0}}</td>
+                <td>{{i.1}}</td>
+                <td>$ {{i.2}}</td>
             </tr>
             {% endfor %}
         </tbody>
@@ -52,38 +54,42 @@
 <br>
 
 <input type="hidden" name="p_id_orden" value="{{id_orden}}">
+<div class="d-flex justify-content-center">
+    <a type="button" class="btn btn-primary btn-xl btn-lg" href="{% url 'clienteMenu' id_orden %}">Volver al menu</a>
+</div>
+<br>
 </div>
 <br>
 <div class="d-flex justify-content-center">
     <a type="button" class="btn btn-primary btn-lg" href="{% url 'pagoCliente' %}">Pago en efectivo</a>
-    &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;
-    <button type="button" class="btn btn-primary btn-lg"data-bs-toggle="modal" data-bs-target="#staticBackdrop" >Solicitar Revision</button>
-    &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp;
-    <button type="button" class="btn btn-primary btn-lg"data-bs-toggle="modal" data-bs-target="#staticBackdrop" >Pago con Tarjeta</button>
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal"
+        data-bs-target="#staticBackdrop">Solicitar Revision</button>
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Pago
+        con Tarjeta</button>
 </div>
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
-                        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="staticBackdropLabel">Revision de Cuenta</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <div class="row">
-                                        
-                                            <div class="form-group col-md-12 center">
-                                                <h2>El Garzon se acercara a su mesa</h2>
-                                            </div>
-                                    </div>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-primary" 
-                                        data-bs-dismiss="modal">Volver</button>
-                                </div>
-                            </div>
-                        </div>
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel">Revision de Cuenta</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+
+                    <div class="form-group col-md-12 center">
+                        <h2>El Garzon se acercara a su mesa</h2>
                     </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Volver</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
