[FIX] min and max mesas

--- a/app/templates/app/administrador/mesas/registroMesas.html
+++ b/app/templates/app/administrador/mesas/registroMesas.html
@@ -15,7 +15,7 @@
           <div class="row">
             <div class="form-group col-md-6">
               <label for="p_nro_mesa">N° Mesa:</label>
-              <input type="number" name="p_nro_mesa" class="form-control" required>
+              <input type="number" min="1" max="12" name="p_nro_mesa" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_cant_sillas" >Cantidad Sillas:</label>
