[CHANGE] colors btn sweet alert

--- a/app/templates/app/administrador/usuarios/indexUser.html
+++ b/app/templates/app/administrador/usuarios/indexUser.html
@@ -6,14 +6,14 @@
     {
       swal.fire({
         "title": "¿Estás seguro?",
-        "text": "¡Estás apunto de desactivar al usuario!",
+        "text": "¡Se desactivara al usuario permanentemente!",
         "icon": "question",
         "showCancelButton": true,
         "cancelButtonText": "No, cancelar",
         "confirmButtonText": "Si, desactivar",
         "reverseButtons": true,
-        "confirmButtonColor": "#dc3545",
-        "cancelButtonColor": "#0069D9"
+        "confirmButtonColor": "#5cb85c",
+        "cancelButtonColor": "#f15a25"
       })
       .then(function(result) {
         if(result.isConfirmed) {
