--- a/app/templates/app/cocina/tablero/indexTablero.html
+++ b/app/templates/app/cocina/tablero/indexTablero.html
@@ -97,8 +97,8 @@
         "cancelButtonText": "No, cancelar",
         "confirmButtonText": "Si, Modificar",
         "reverseButtons": true,
-        "confirmButtonColor": "#dc3545",
-        "cancelButtonColor": "#0069D9"
+        "confirmButtonColor": "#5cb85c",
+        "cancelButtonColor": "#f15a25"
         })
         .then(function(result) {
           if(result.isConfirmed) {
