--- a/app/templates/app/administrador/menus/indexMenusProductos.html
+++ b/app/templates/app/administrador/menus/indexMenusProductos.html
@@ -72,8 +72,8 @@
         "cancelButtonText": "No, cancelar",
         "confirmButtonText": "Si, Eliminar",
         "reverseButtons": true,
-        "confirmButtonColor": "#dc3545",
-        "cancelButtonColor": "#0069D9"
+        "confirmButtonColor": "#5cb85c",
+        "cancelButtonColor": "#f15a25"
       })
       .then(function(result) {
         if(result.isConfirmed) {
