--- a/app/templates/app/cliente/detalleReserva.html
+++ b/app/templates/app/cliente/detalleReserva.html
@@ -151,8 +151,8 @@
                 "cancelButtonText": "No",
                 "confirmButtonText": "Si",
                 "reverseButtons": true,
-                "confirmButtonColor": "#dc3545",
-                "cancelButtonColor": "#0069D9"
+                "confirmButtonColor": "#5cb85c",
+                "cancelButtonColor": "#f15a25"
             })
                 .then(function (result) {
                     if (result.isConfirmed) {
