--- a/app/templates/app/bodega/stock-productos/agregarStockProductos.html
+++ b/app/templates/app/bodega/stock-productos/agregarStockProductos.html
@@ -54,7 +54,40 @@
         </div>
       </div>
     </form>
+
+    <hr>
+
+    <h2>Resumen Pedido</h2>
+  
+    <div id="toolbar">
+    </div>
+    <table id="table" class="table table-striped table-bordered" style="width: 100%;"
+      data-toggle="table"
+      data-toolbar="#toolbar"
+      data-search="true">
+    
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Insumo</th>
+          <th scope="col">Cantidad</th>
+          <th scope="col">U° de Medida</th>
+          <th scope="col">Marca</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for d in DetallePedido %}
+        <tr>
+          <td>{{d.3}}</td>
+          <td>{{d.4}}</td>
+          <td>{{d.5}}</td>
+          <td>{{d.7}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+
   </div>
+  
 
 
   <style>
