--- a/app/templates/app/administrador/disponibilidad/registroDisponibilidad.html
+++ b/app/templates/app/administrador/disponibilidad/registroDisponibilidad.html
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group col-md-6">
               <label for="p_hora_disp" >Hora Disponibilidad:</label>
-              <input type="number" name="p_hora_disp" id="" class="form-control" required>
+              <input type="time" name="p_hora_disp" id="" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_personas">Capacidad</label>
