[ADD] lista recetas para cocineros

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -230,6 +230,10 @@
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Tablero</span>
           </a>
+          <a class="nav-link" href="{% url 'indexRecetasTwo' %}" select>
+            <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
+            <span>Recetas</span>
+          </a>
         </div>
         {% endif %}
       </li>
