--- a/app/templates/app/finanzas/facturas/indexFacturas.html
+++ b/app/templates/app/finanzas/facturas/indexFacturas.html
@@ -48,6 +48,7 @@
         <td class="p-1">
           <a href="{% url 'modificarGestionFacturas' f.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
           <a onclick="eliminarFactura({{ f.0 }})" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
+          <a href="{% url 'verGestionFactura' f.0 %}" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-eye"> Ver</i></a>
         </td>
       </tr>
       {% endfor %}
