--- a/app/templates/app/finanzas/informes/indexInformes.html
+++ b/app/templates/app/finanzas/informes/indexInformes.html
@@ -10,31 +10,77 @@
     <form action="" method="post">
         <div class="col">
             <div class="row">
-                <div class="form-group col-md-6">
-                    <label for="">Fecha Desde:</label>
-                    <input type="date" class="form-control">
+                <div class="form-group col-md-12">
+                    <!-- <label for="">Fecha Desde:</label>
+                    <input type="date" class="form-control"> -->
                 
                     <label for="" class="mt-4">Tipo Reporte:</label>
-                    <select name="" id="" class="form-control">
-                        <option value="">Facturas Pasadas</option>
-                        <option value="">Facturas Pagadas</option>
-                        <option value="">Facturas Vencidas</option>
+                    <select name="" id="tipos-facturas" class="form-control">
+                        <option value="3">Facturas Pasadas</option>
+                        <option value="4">Facturas Pagadas</option>
+                        <option value="5">Facturas Vencidas</option>
                     </select>
                 </div>
-                <div class="form-group col-md-6">
+                <!-- <div class="form-group col-md-6">
                     <label for="">Fecha Hasta:</label>
                     <input type="date" class="form-control">
-                </div>
+                </div> -->
 
                 <button class="btn btn-primary d-flex mr-auto mt-4">
                 <a href="{% url 'indexGestionFacturas' %}" 
                 style="color: white;"
                 >Volver</a>
                 </button>
-                <button class="btn btn-primary d-flex ml-auto mt-4" type="submit">Generar reporte</button>
+                <a id="btn-reporte" class="btn btn-primary d-flex ml-auto mt-4" type="button" href="" style="color: white;" target="_blank">Generar reporte</a>
             </div>
         </div>
     </form>
 </div>
 
+{% endblock %}
+
+{% block js %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script>
+    $(document).ready(function() {
+        var tipos_value = $('#tipos-facturas').val();
+        switch (tipos_value) {
+            case "3":
+                $('#btn-reporte').attr("href", 'lista-facturas-pasadas');
+                break;
+        
+            case "4":
+                $('#btn-reporte').attr("href", 'lista-facturas-pagadas');
+                break;
+        
+            case "5":
+                $('#btn-reporte').attr("href", 'lista-facturas-vencidas');
+                break;
+        
+            default:
+                break;
+        }
+    });
+
+    $('#tipos-facturas').change(function() {
+        var tipos_value = $(this).val();
+        switch (tipos_value) {
+            case "3":
+                $('#btn-reporte').attr("href", 'lista-facturas-pasadas');
+                break;
+        
+            case "4":
+                $('#btn-reporte').attr("href", 'lista-facturas-pagadas');
+                break;
+        
+            case "5":
+                $('#btn-reporte').attr("href", 'lista-facturas-vencidas');
+                break;
+        
+            default:
+                break;
+        }
+    });
+</script>
 {% endblock %}
