--- a/app/templates/app/administrador/pedidos-proveedor/detallePedidosProveedor.html
+++ b/app/templates/app/administrador/pedidos-proveedor/detallePedidosProveedor.html
@@ -49,19 +49,21 @@
                 </a>
 
                 {% if DetallePedidos.0.1 %}
-                <form action="/autorizar-pedido/" method="GET">
-                    <input type="hidden" name="p_id_pedido" value="{{DetallePedidos.0.1}}">
-                    <input type="hidden" name="p_opcion1" value="1">
-                    <input type="hidden" name="p_opcion2" value="0">
-                    <button class="btn btn-success d-flex ml-auto mr-3" type="submit">Autorizar Pedido</button>
-                </form>
+                    {% if Pedido.0.3 == 1 %}
+                        <form action="/autorizar-pedido/" method="GET">
+                            <input type="hidden" name="p_id_pedido" value="{{DetallePedidos.0.1}}">
+                            <input type="hidden" name="p_opcion1" value="1">
+                            <input type="hidden" name="p_opcion2" value="0">
+                            <button class="btn btn-success d-flex ml-auto mr-3" type="submit">Autorizar Pedido</button>
+                        </form>
 
-                <form action="/autorizar-pedido/" method="GET">
-                    <input type="hidden" name="p_id_pedido" value="{{DetallePedidos.0.1}}">
-                    <input type="hidden" name="p_opcion1" value="0">
-                    <input type="hidden" name="p_opcion2" value="1">
-                    <button class="btn btn-danger d-flex ml-auto" type="submit">Rechazar Pedido</button>
-                </form>
+                        <form action="/autorizar-pedido/" method="GET">
+                            <input type="hidden" name="p_id_pedido" value="{{DetallePedidos.0.1}}">
+                            <input type="hidden" name="p_opcion1" value="0">
+                            <input type="hidden" name="p_opcion2" value="1">
+                            <button class="btn btn-danger d-flex ml-auto" type="submit">Rechazar Pedido</button>
+                        </form>
+                    {% endif %}
                 {% endif %}
             </div>  
         </div>
