--- a/app/templates/app/administrador/insumos/indexInsumos.html
+++ b/app/templates/app/administrador/insumos/indexInsumos.html
@@ -23,8 +23,8 @@
         <!-- <th scope="col">#</th> -->
         <th scope="col">Nombre</th>
         <th scope="col">Tipo Insumo</th>
-        <th scope="col">Categoria Insumo</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Estado</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
