--- a/app/templates/app/bodega/stock-productos/indexStockProductos.html
+++ b/app/templates/app/bodega/stock-productos/indexStockProductos.html
@@ -21,19 +21,38 @@
         <!-- <th scope="col">#</th> -->
         <th scope="col">Nombre</th>
         <th scope="col">Stock </th>
-        <th scope="col">Unidad de Medida</th>
         <th scope="col">Estado</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Unidad de medida</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
       {% for sp in StockProductos %}
       <tr>
         <!-- <th scope="row">{{ u.id }}</th> -->
-        <td>{{sp.2}}</td>
-        <td>{{sp.3}}</td>
-        <td>{{sp.5}}</td>
-        <td>{{sp.7}}</td>
+        <td
+          style="color:  
+        {% if 'sp.4==Crítico' %}
+            'red'
+        {% elif 'sp.4==Bajo' %}
+            'yellow'
+        {% elif 'sp.4==Bueno' %}
+            'green'
+          {% endif %} ;"
+        
+        >{{sp.2}}</td>
+
+        <td
+        
+        >{{sp.3}}</td>
+        <td
+          
+        
+        >{{sp.4}}</td>
+        <td
+          
+        
+        >{{sp.6}}</td>
         <td class="p-1">
           <a href="{% url 'modificarStockProductos' sp.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Detalle</i></a>
           <!-- <a onclick="" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Desactivar</i></a> -->
@@ -47,6 +66,7 @@
 <!-- /#wrapper -->
 
 <style>
+.  
 #proveedores-table{
   font-size: 14px;
 }
