--- a/app/templates/app/caja/pago-efectivo/detalleMesasCajas.html
+++ b/app/templates/app/caja/pago-efectivo/detalleMesasCajas.html
@@ -22,16 +22,16 @@
             <input type="number" name="p_nro_mesa" class="form-control" value="{{m.1}}" disabled>
           </div>
           <div class="form-group col-md-6">
-            <label for="p_cant_sillas" >Cantidad Sillas:</label>
-            <input type="number" name="p_cant_sillas" id="" class="form-control" value="{{m.2}}" disabled>
+            <label for="p_cant_sillas" >Ubicacion:</label>
+            <input type="text" name="p_cant_sillas" id="" class="form-control" value="{{m.3}}" disabled>
           </div>
           <div class="form-group col-md-6">
-            <label for="p_cant_sillas" >Ubicacion:</label>
-            <input type="text" name="p_cant_sillas" id="" class="form-control" value="{{m.4}}" disabled>
+            <label for="p_cant_sillas" >Monto a Pagar:</label>
+            <input type="text" name="p_cant_sillas" id="" class="form-control" value="${{m.6}}" disabled>
           </div>
           <div class="form-group col-md-6">
             <label for="p_cant_sillas" >Estado:</label>
-            <input type="text" name="p_cant_sillas" id="" class="form-control" value="{{m.6}}" disabled>
+            <input type="text" name="p_cant_sillas" id="" class="form-control" value="{{m.5}}" disabled>
           </div>
         </div>
         </div>
