--- a/app/templates/app/caja/pago-efectivo/indexPagoEfectivo.html
+++ b/app/templates/app/caja/pago-efectivo/indexPagoEfectivo.html
@@ -18,7 +18,9 @@
       <tr>
         <!-- <th scope="col">#</th> -->
         <th scope="col">N° de Mesa</th>
-        <th scope="col">Cantidad Sillas</th>
+        <th scope="col">Ubicacion</th>
+        <th scope="col">Estado</th>
+        <th scope="col">Monto a Pagar</th>
         <th scope="col">Acciónes</th>
       </tr>
     </thead>
@@ -27,7 +29,9 @@
       <tr>
         <!-- <th scope="row">{{ u.id }}</th> -->
         <td>{{m.1}}</td>
-        <td>{{m.2}}</td>
+        <td>{{m.3}}</td>
+        <td>{{m.5}}</td>
+        <td>${{m.6}}</td>
         <td class="p-1">
           <a href="{% url 'detalleMesasCajas' m.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit">Ver Detalle</i></a>
         </td>
