--- a/app/templates/app/administrador/disponibilidad/editarDisponibilidad.html
+++ b/app/templates/app/administrador/disponibilidad/editarDisponibilidad.html
@@ -83,7 +83,7 @@
           </div>
           <div class="form-group col-md-6">
             <label for="p_hora_disp" >Hora Disponibilidad:</label>
-            <input type="number" name="p_hora_disp" id="" class="form-control" value="{{d.4}}" required>
+            <input type="time" name="p_hora_disp" id="" class="form-control" value="{{d.4}}" required>
           </div>
           <div class="form-group col-md-6">
             <label for="p_personas">Capacidad</label>
