--- a/app/templates/app/cliente/detalleCliente.html
+++ b/app/templates/app/cliente/detalleCliente.html
@@ -55,7 +55,7 @@
 
 <input type="hidden" name="p_id_orden" value="{{id_orden}}">
 <div class="d-flex justify-content-center">
-    <a type="button" class="btn btn-primary btn-xl btn-lg" href="{% url 'clienteMenu' id_orden %}">Volver al menu</a>
+    <a type="button" class="btn btn-primary btn-xl btn-lg" href="{% url 'clienteMenu' id_orden %}">Volver a Pedir</a>
 </div>
 <br>
 </div>
