--- a/app/templates/app/cliente/clienteMenu.html
+++ b/app/templates/app/cliente/clienteMenu.html
@@ -1,18 +1,17 @@
 {% extends 'app/cliente/baseCliente.html' %}
-
 {% block contenido %}
 {% load static %}
+
 <br>
 <h2 class="titulo_menu">Nuestro Menú</h2>
 
 
 <div class="d-flex justify-content-center" type="button">
     <form action="/detalle-orden/" method="GET">
-
         {% for ltd in listarProducto %}
         <div class="cartaMenu">
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="p_id_producto" id="inlineRadio1" value="{{ltd.0}}">
+                <input class="form-check-input" type="radio" name="p_id_producto" id="inlineRadio1" value="{{ltd.0}}" required>
                 <label class="form-check-label" for="inlineRadio1">{{ltd.1}} $ {{ltd.2}}</label>
             </div>
             <img src="{{ ltd.9 }}" alt="Plato 1">
@@ -28,13 +27,41 @@
  
 </div>
 <hr>
+<!-- --------------------LISTADO----------------------- -->
+<div>
+    <table id="table" class="table table-striped table-bordered" style="width: 100%;" data-toggle="table"
+        data-toolbar="#toolbar" data-search="true">
+
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">Platos </th>
+                <th scope="col">Cantidad </th>
+                <th scope="col">Precio</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for i in listarDetalleOrden %}
+            <label for="p_id_reserva"></label>
+            <input type="hidden" name="p_id_reserva" for="p_id_reserva" value="{{i.0}}">
+            <tr>
+                <td>{{i.0}}</td>
+                <td>{{i.1}}</td>
+                <td>$ {{i.2}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+<!-- --------------------LISTADO----------------------- -->
 </tbody>
+</div>
 <br>
 <div class="d-flex justify-content-center">
 
-    <button type="submit" class="btn btn-primary btn-lg">Agregar Producto</button>
+    <button type="submit" class="btn btn-primary btn-lg" id="btn-agregar">Agregar Producto</button>
     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <a class="btn btn-primary btn-lg" type="submit" href="{% url 'listarDetalleOrden' id_orden %}">Finalizar Pedido</a>
+        <a class="btn btn-primary btn-lg" type="button" href="{% url 'listarDetalleOrden' id_orden %}">Finalizar Pedido</a>
 </div>
 </form>
 {% endblock %}
+
