--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -175,7 +175,7 @@
       </li>
 
       <li class="nav-item dropdown">
-        {% if perms.app.add_caja %}
+        {% if perms.app.change_estadofactura %}
         <a class="nav-link dropdown-toggle dropdown-btn" href="#" id="pagesDropdown" role="button"
           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-fw fa-user"></i>
