cambio stock y comanda

--- a/app/templates/app/cocina/tablero/indexTablero.html
+++ b/app/templates/app/cocina/tablero/indexTablero.html
@@ -20,6 +20,7 @@
       <tr>
         <th scope="col">Mesa</th>
         <th scope="col">Hora Inicio</th>
+        <th scope="col">Tiempo de espera</th>
         <th scope="col">Estado</th>
         <th scope="col">Acciones</th>
         <!-- <th scope="col">Acciones</th> -->
@@ -31,6 +32,7 @@
           <tr>
             <td>{{oc.6}}</td>
             <td>{{oc.4}}</td>
+            <td>{{oc.7}} minutos</td>
             <td>
               <select class="form-control text-left" name="id_est_comanda" id="id_est_comanda">
                 {% for ec in EstadoComanda %}
