--- a/app/templates/app/bodega/stock-productos/indexStockProductos.html
+++ b/app/templates/app/bodega/stock-productos/indexStockProductos.html
@@ -19,6 +19,7 @@
     <thead class="thead-dark">
       <tr>
         <!-- <th scope="col">#</th> -->
+        <th scope="col"></th>
         <th scope="col">Nombre</th>
         <th scope="col">Stock </th>
         <th scope="col">Estado</th>
@@ -32,20 +33,23 @@
         <!-- <th scope="row">{{ u.id }}</th> -->
         
         {% if sp.4 == 'Crítico' %}
-          <td class="text-danger">{{sp.2}}</td>
-          <td class="text-danger">{{sp.3}}</td>
-          <td class="text-danger">{{sp.4}}</td>
-          <td class="text-danger">{{sp.6}}</td>
+          <td><span style="background-color: red; border-radius: 50%; height: 5px;width: 5px; line-height: 5px; padding-left: 10px; padding-right: 10px;padding-top: 2px; padding-bottom: 2px;"></span></td>
+          <td>{{sp.2}}</td>
+          <td>{{sp.3}}</td>
+          <td>{{sp.4}}</td>
+          <td>{{sp.6}}</td>
         {% elif sp.4 == 'Bajo' %}
-          <td class="text-warning">{{sp.2}}</td>
-          <td class="text-warning">{{sp.3}}</td>
-          <td class="text-warning">{{sp.4}}</td>
-          <td class="text-warning">{{sp.6}}</td>
+          <td><span style="background-color: gold; border-radius: 50%; height: 5px;width: 5px; line-height: 5px; padding-left: 10px; padding-right: 10px;padding-top: 2px; padding-bottom: 2px;"></span></td>
+          <td>{{sp.2}}</td>
+          <td>{{sp.3}}</td>
+          <td>{{sp.4}}</td>
+          <td>{{sp.6}}</td>
         {% elif sp.4 == 'Bueno' %}
-          <td class="text-success">{{sp.2}}</td>
-          <td class="text-success">{{sp.3}}</td>
-          <td class="text-success">{{sp.4}}</td>
-          <td class="text-success">{{sp.6}}</td>
+        <td><span style="background-color: green; border-radius: 50%; height: 5px;width: 5px; line-height: 5px; padding-left: 10px; padding-right: 10px;padding-top: 2px; padding-bottom: 2px;"></span></td>
+          <td>{{sp.2}}</td>
+          <td>{{sp.3}}</td>
+          <td>{{sp.4}}</td>
+          <td>{{sp.6}}</td>
         {% else %}
           <td>{{sp.2}}</td>
           <td>{{sp.3}}</td>
