--- a/app/templates/app/administrador/recetas/indexIngredientesRecetas.html
+++ b/app/templates/app/administrador/recetas/indexIngredientesRecetas.html
@@ -21,6 +21,7 @@
         <!-- <th scope="col">#</th> -->
         <th scope="col">Ingrediente</th>
         <th scope="col">Cantidad</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
@@ -29,6 +30,10 @@
         <!-- <th scope="row">{{ u.id }}</th> -->
         <td>{{i.3}}</td>
         <td>{{i.4}}</td>
+        <td class="p-1">
+          <a href="{% url 'modificarIngredientesRecetas' i.5 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
+          <a onclick="eliminarInsumo({{ i.0 }})" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
+        </td>
       </tr>
       {% endfor %}
     </tbody>
