--- a/app/templates/app/administrador/recetas/indexIngredientesRecetas.html
+++ b/app/templates/app/administrador/recetas/indexIngredientesRecetas.html
@@ -32,7 +32,7 @@
         <td>{{i.4}}</td>
         <td class="p-1">
           <a href="{% url 'modificarIngredientesRecetas' i.5 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-edit"> Editar</i></a>
-          <a onclick="eliminarInsumo({{ i.0 }})" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
+          <a href="{% url 'eliminarIngredientesRecetas' i.5 %}" class="btn btn-primary" style="font-size: 14px; color: white; cursor: pointer;"><i class="fa fa-minus-square"> Eliminar</i></a>
         </td>
       </tr>
       {% endfor %}
@@ -63,11 +63,11 @@
 {% block js %}
 
   <script>
-    function eliminarMenu(id)
+    function eliminarIngredienteReceta(id)
     {
       swal.fire({
         "title": "¿Estás seguro?",
-        "text": "¡Estás apunto de eliminar el menu!",
+        "text": "¡Estás apunto de eliminar el Ingrediente!",
         "icon": "question",
         "showCancelButton": true,
         "cancelButtonText": "No, cancelar",
