--- a/app/templates/app/bodega/stock-productos/indexStockProductos.html
+++ b/app/templates/app/bodega/stock-productos/indexStockProductos.html
@@ -19,7 +19,7 @@
     <thead class="thead-dark">
       <tr>
         <!-- <th scope="col">#</th> -->
-        <th scope="col">y</th>
+        <th scope="col">Nivel</th>
         <th scope="col">Nombre</th>
         <th scope="col">Stock </th>
         <th scope="col">Estado</th>
