[fix] insumo edit

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -43,7 +43,7 @@
 
   <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
-    <a class="mr-1" style="font-size: 20px;" href="index.html">Siglo XXI</a>
+    <a class="mr-1" style="font-size: 20px;" href="{% url 'dashboard' %}">Siglo XXI</a>
 
     <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
       <i class="fas fa-bars"></i>
