--- a/app/templates/app/cliente/detalleCliente.html
+++ b/app/templates/app/cliente/detalleCliente.html
@@ -49,13 +49,38 @@
 </div> -->
 <br>
 <form action="/ingresar-Pago-tarjeta/" method="GET">
+    
+    <div class="modal fade" id="staticBackdropTwo" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropTwoLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropTwoLabel">Envio de Comprobante</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <input type="hidden" name="p_id_orden" for="p_id_orden" value="{{id_orden}}">
+                        <input type="hidden" name="p_monto_venta" for="p_monto_venta" value="{{total}}">
+                        <div class="form-group col-md-12 center">
+                            <label>Ingrese Correo Electronico:</label>
+                            <input class="form-control" type="email" name="p_correo" id="p_correo" required>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Volver</button>
+                    <button type="submit" class="btn btn-primary" href="{% url 'ingresarPagotarjeta'  %}">Aceptar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div>
         <h2 class="total" name="p_monto_venta" for="p_monto_venta">Total a Pagar: $ {{total}}</h2>
     </div>
     <br>
 
-    <input type="hidden" name="p_id_orden" for="p_id_orden" value="{{id_orden}}">
-    <input type="hidden" name="p_monto_venta" for="p_monto_venta" value="{{total}}">
     <div class="d-flex justify-content-center">
         <a type="button" class="btn btn-primary btn-xl btn-lg" href="{% url 'clienteMenu' id_orden %}">Volver a
             Pedir</a>
@@ -69,7 +94,8 @@
         <a type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal"
             data-bs-target="#staticBackdrop">Solicitar Revision</a>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <button type="submit" class="btn btn-primary btn-lg" href="{% url 'ingresarPagotarjeta'  %}">Pago con Tarjeta</button>
+        <a type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal"
+            data-bs-target="#staticBackdropTwo">Pago con Tarjeta</a>
     </div>
 </form>
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
