--- a/app/templates/app/cocina/tablero/indexTablero.html
+++ b/app/templates/app/cocina/tablero/indexTablero.html
@@ -34,7 +34,7 @@
             <td>{{oc.4}}</td>
             <td>{{oc.7}} minutos</td>
             <td>
-              <select class="form-control text-left" name="id_est_comanda" id="id_est_comanda_{{oc.0}}">
+              <select class="form-control text-left est_comanda" name="id_est_comanda" id="id_est_comanda">
                 {% for ec in EstadoComanda %}
                   {% if ec.0 == oc.2 %}
                     <option id="{{oc.0}}" value="{{ec.0}}" selected>{{ec.1}}</option>
@@ -87,7 +87,7 @@
 <script>
 
   $(document).ready(function(){
-    $("#id_est_comanda").change(function() {
+    $(".est_comanda").change(function() {
       let id_est_comanda = $(this).children("option:selected").val();
       let id_comanda = $(this).children("option:selected").attr("id");
       
