cambios validaciones varias

--- a/app/templates/app/administrador/insumos/editarInsumos.html
+++ b/app/templates/app/administrador/insumos/editarInsumos.html
@@ -83,7 +83,7 @@
             </div>
             <div class="form-group col-md-6">
               <label for="p_nom_insumo">Nombre:</label>
-              <input type="text" name="p_nom_insumo" class="form-control" value="{{Insumo.0.1}}" required readonly>
+              <input type="text" name="p_nom_insumo" class="form-control" value="{{Insumo.0.1}}" required>
             </div>
             
             <div class="form-group col-md-6">
