--- a/app/templates/app/administrador/mesas/editarMesas.html
+++ b/app/templates/app/administrador/mesas/editarMesas.html
@@ -79,11 +79,11 @@
           <input type="hidden" name="id" value="{{m.0}}">
           <div class="form-group col-md-6">
             <label for="p_nro_mesa">N° Mesa:</label>
-            <input type="number" min="1" max="12" name="p_nro_mesa" class="form-control" value="{{m.1}}" required>
+            <input type="number" min="1" name="p_nro_mesa" class="form-control" value="{{m.1}}" required>
           </div>
           <div class="form-group col-md-6">
             <label for="p_cant_sillas" >Cantidad Sillas:</label>
-            <input type="number" name="p_cant_sillas" id="" class="form-control" value="{{m.2}}" required>
+            <input type="number" min="1" max="12" name="p_cant_sillas" id="" class="form-control" value="{{m.2}}" required>
           </div>
           <div class="form-group col-md-6">
             <label for="p_id_ubi">Ubicaciones</label>
