--- a/app/templates/app/administrador/proveedores/registroProveedores.html
+++ b/app/templates/app/administrador/proveedores/registroProveedores.html
@@ -55,7 +55,7 @@
             </div>
             <div class="form-group col-md-6">
               <label for="p_nro_casa">N° Casa</label>
-              <input type="number" name="p_nro_casa" id="" class="form-control" required>
+              <input type="number" name="p_nro_casa" id="" class="form-control">
             </div>
             <div class="form-group col-md-6">
               <label for="p_tipo_dir">Tipo Dirección</label>
