--- a/app/templates/app/administrador/recetas/indexRecetas.html
+++ b/app/templates/app/administrador/recetas/indexRecetas.html
@@ -33,8 +33,8 @@
         <!-- <th scope="row">{{ u.id }}</th> -->
         <td>{{r.1}}</td>
         <td>{{r.3}}</td>
-        <td>{{r.4}}</td>
-        <td>{{r.5}}</td>
+        <td>{{r.4}} minutos</td>
+        <td>{{r.5}} °C</td>
         <td>{{r.6}}</td>
         <td class="p-1">
           <a href="{% url 'indexIngredientesRecetas' r.0 %}" class="btn btn-primary" style="font-size: 14px;"><i class="fa fa-eye"> Ingredientes</i></a>
