--- a/app/templates/app/administrador/productos/indexProductos.html
+++ b/app/templates/app/administrador/productos/indexProductos.html
@@ -25,7 +25,7 @@
         <th scope="col">Categoria</th>
         <th scope="col">Tipo</th>
         <th scope="col">Receta</th>
-        <th scope="col">Acciónes</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
