--- a/app/templates/app/administrador/recetas/editarRecetas.html
+++ b/app/templates/app/administrador/recetas/editarRecetas.html
@@ -22,11 +22,11 @@
           </div>
           <div class="form-group col-md-6">
             <label for="p_tiempo_prep">Tiempo Preparación (Min):</label>
-            <input type="number" name="p_tiempo_prep" class="form-control" value="{{r.4}}" required>
+            <input type="number" min="0" max="500" name="p_tiempo_prep" class="form-control" value="{{r.4}}" required>
           </div>
           <div class="form-group col-md-6">
             <label for="p_temp_ideal">Temperatura Ideal (C):</label>
-            <input type="number" name="p_temp_ideal" class="form-control" value="{{r.5}}" required>
+            <input type="number" min="0" max="230" name="p_temp_ideal" class="form-control" value="{{r.5}}" required>
           </div>
           <div class="form-group col-md-12">
             <label for="p_instrucciones">Instrucciones:</label>
