[FIX] editar disponibilidad setear fecha

--- a/app/templates/app/administrador/disponibilidad/editarDisponibilidad.html
+++ b/app/templates/app/administrador/disponibilidad/editarDisponibilidad.html
@@ -79,7 +79,7 @@
           <input type="hidden" name="id" value="{{d.0}}">
           <div class="form-group col-md-6">
             <label for="p_fec_disp">Fecha Disponibilidad:</label>
-            <input type="date" name="p_fec_disp" class="form-control" value="{{d.3}}" required>
+            <input type="date" name="p_fec_disp" class="form-control" value="{{fecha}}" required>
           </div>
           <div class="form-group col-md-6">
             <label for="p_hora_disp" >Hora Disponibilidad:</label>
