--- a/app/templates/app/administrador/disponibilidad/editarDisponibilidad.html
+++ b/app/templates/app/administrador/disponibilidad/editarDisponibilidad.html
@@ -87,7 +87,7 @@
           </div>
           <div class="form-group col-md-6">
             <label for="p_personas">Capacidad</label>
-            <input type="number" name="p_personas" id="" class="form-control" value="{{d.5}}" required>
+            <input type="number"  min="1" max="12" name="p_personas" id="" class="form-control" value="{{d.5}}" required>
           </div>
         </div>
         {% endfor %}
