--- a/app/templates/app/administrador/disponibilidad/registroDisponibilidad.html
+++ b/app/templates/app/administrador/disponibilidad/registroDisponibilidad.html
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group col-md-6">
               <label for="p_personas">Capacidad</label>
-              <input type="number" name="p_personas" id="" class="form-control" required>
+              <input type="number" min="1" max="12" name="p_personas" id="" class="form-control" required>
             </div>
           </div>
         </div>
