--- a/app/templates/app/administrador/mesas/editarMesas.html
+++ b/app/templates/app/administrador/mesas/editarMesas.html
@@ -79,7 +79,7 @@
           <input type="hidden" name="id" value="{{m.0}}">
           <div class="form-group col-md-6">
             <label for="p_nro_mesa">N° Mesa:</label>
-            <input type="number" min="1" name="p_nro_mesa" class="form-control" value="{{m.1}}" required>
+            <input type="number" min="1" name="p_nro_mesa" class="form-control" value="{{m.1}}" required readonly>
           </div>
           <div class="form-group col-md-6">
             <label for="p_cant_sillas" >Cantidad Sillas:</label>
