--- a/app/templates/app/administrador/proveedores/registroProveedores.html
+++ b/app/templates/app/administrador/proveedores/registroProveedores.html
@@ -30,8 +30,8 @@
               <input type="text" name="p_nom_corto" id="" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
-              <label for="p_telefono" >Telefono:</label>
-              <input type="number" name="p_telefono" id="" class="form-control" required>
+              <label for="p_telefono" >Teléfono:</label>
+              <input type="number" min="900000000" max="999999999" name="p_telefono" id="" class="form-control" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_correo" >Correo:</label>
