--- a/app/templates/app/bodega/stock-productos/editarStockProductos.html
+++ b/app/templates/app/bodega/stock-productos/editarStockProductos.html
@@ -27,7 +27,7 @@
           </div>
           <div class="form-group col-md-6">
             <label for="p_add_stock">Stock:</label>
-            <input type="number" name="p_add_stock" class="form-control text-center" value="{{i.3}}" required>
+            <input type="number" min="1" name="p_add_stock" class="form-control text-center" value="{{i.3}}" required>
           </div>
           <div class="form-group col-md-6">
             <label for="p_id_medida">Unidad de Medida:</label>
