--- a/app/templates/app/administrador/proveedores/editarProveedores.html
+++ b/app/templates/app/administrador/proveedores/editarProveedores.html
@@ -95,7 +95,7 @@
             </div>
             <div class="form-group col-md-6">
               <label for="p_telefono" >Telefono:</label>
-              <input type="number" name="p_telefono" id="" class="form-control" value="{{Proveedor.0.3}}" required>
+              <input type="number" min="900000000" max="999999999" name="p_telefono" id="" class="form-control" value="{{Proveedor.0.3}}" required>
             </div>
             <div class="form-group col-md-6">
               <label for="p_correo" >Correo:</label>
@@ -123,7 +123,7 @@
             </div>
             <div class="form-group col-md-6">
               <label for="p_nro_casa">N° Casa</label>
-              <input type="number" name="p_nro_casa" id="" value="{{ Proveedor.0.11 }}" class="form-control" required>
+              <input type="number" name="p_nro_casa" id="" value="{{ Proveedor.0.11 }}" class="form-control">
             </div>
             <div class="form-group col-md-6">
               <label for="p_tipo_dir">Tipo Dirección</label>
