--- a/app/templates/app/bodega/stock-productos/agregarStockProductos.html
+++ b/app/templates/app/bodega/stock-productos/agregarStockProductos.html
@@ -41,7 +41,7 @@
           </div>
           <div class="form-group col-md-3">
             <label for="p_cantidad">Cantidad:</label>
-            <input class="form-control" type="number" name="p_cantidad" id="" required>
+            <input class="form-control" type="number" min="1" name="p_cantidad" id="" required>
           </div>
         </div>
       </div>
