--- a/app/templates/app/finanzas/reporte/utilidad.html
+++ b/app/templates/app/finanzas/reporte/utilidad.html
@@ -25,7 +25,7 @@
                     <input type="date" class="form-control">
                 </div> -->
 
-                <button class="btn btn-primary d-flex mr-auto mt-4">
+                <button type="button" class="btn btn-primary d-flex mr-auto mt-4">
                 <a href="{% url 'indexGestionFacturas' %}" 
                 style="color: white;"
                 >Volver</a>
