[FIX] Reporte utilidad

--- a/app/templates/app/caja/informes/boletaEfectivo.html
+++ b/app/templates/app/caja/informes/boletaEfectivo.html
@@ -1,5 +1,5 @@
 <h1>
-    Boleta Nro: {{boletas.0.0}}
+    Boleta Nro: {{boletas.0}}
 </h1>
 
 <table border="1">
@@ -9,12 +9,12 @@
         <th style="padding-top:5px;">Detalle</th>
     </thead>
     <tbody>
-        {% for boleta in boletas %}
+        
         <tr style="padding-top:5px;">
-            <td><center>{{ boleta.1 }}</center></td>
-            <td><center>{{ boleta.2 }}</center></td>
-            <td><center>{{ boleta.3 }}</center></td>
+            <td><center>{{ boletas.1 }}</center></td>
+            <td><center>{{ boletas.2 }}</center></td>
+            <td><center>{{ boletas.3 }}</center></td>
         </tr>
-        {% endfor %}
+        
     </tbody>
 </table>
