--- a/app/templates/app/finanzas/informes/facturas.html
+++ b/app/templates/app/finanzas/informes/facturas.html
@@ -1,8 +1,8 @@
 <h1>
-    {% if estado == 3 %}
-        Lista de Facturas Pasadas
-    {% elif estado == 4 %}
-        Lista de Facturas Pagadas
+    {% if estado == 1 %}
+        Lista de Facturas Vigentes
+    {% elif estado == 2 %}
+        Lista de Facturas Rechazadas
     {% elif estado == 5 %}
         Lista de Facturas Vencidas
     {% endif %}
