--- a/app/templates/app/finanzas/informes/indexInformes.html
+++ b/app/templates/app/finanzas/informes/indexInformes.html
@@ -16,9 +16,9 @@
                 
                     <label for="" class="mt-4">Tipo Reporte:</label>
                     <select name="" id="tipos-facturas" class="form-control">
-                        <option value="3">Facturas Pasadas</option>
-                        <option value="4">Facturas Pagadas</option>
-                        <option value="5">Facturas Vencidas</option>
+                        <option value="3">Facturas Vigentes</option>
+                        <option value="4">Facturas Rechazadas</option>
+                        <!-- <option value="5">Facturas Vencidas</option> -->
                     </select>
                 </div>
                 <!-- <div class="form-group col-md-6">
